Cria área de ações do topico

--- a/gaeia-web/src/components/Sidebar.astro
+++ b/gaeia-web/src/components/Sidebar.astro
@@ -1,7 +1,7 @@
 ---
 import ProgressRing from './ProgressRing.astro';
 import GaeiaLogo from './GaeiaLogo.astro';
-import { getAllTrilhas, getTrilhaTopicoIds, getAllTopicos } from '../utils/trilhas';
+import { getAllTrilhas, getAllTopicos } from '../utils/trilhas';
 import { url } from '../utils/url';
 
 // Load trilhas for navigation
