--- a/gaeia-web/src/pages/topicos/index.astro
+++ b/gaeia-web/src/pages/topicos/index.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from '../../layouts/BaseLayout.astro';
-import { getAllTopicos, getAllTags, getTopicoTrilhas } from '../../utils/trilhas';
+import { getAllTopicos, getAllTags } from '../../utils/trilhas';
 import type { Topico } from '../../types/trilhas';
 import { NIVEL_LABELS, NIVEL_COLORS_SUBTLE } from '../../utils/uiConstants';
 import { url } from '../../utils/url';
