--- a/gaeia-web/src/pages/trilhas/[trilha]/index.astro
+++ b/gaeia-web/src/pages/trilhas/[trilha]/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '../../../layouts/BaseLayout.astro';
 import ProgressBar from '../../../components/ProgressBar.astro';
 import { getAllTrilhas, getTrilha, getTrilhaTopicos, getTrilhaTopicoIds } from '../../../utils/trilhas';
-import type { Trilha, Topico } from '../../../types/trilhas';
+import type { Topico } from '../../../types/trilhas';
 import { NIVEL_LABELS, NIVEL_COLORS_BADGE } from '../../../utils/uiConstants';
 import { url } from '../../../utils/url';
 
