--- a/gaeia-web/src/pages/index.astro
+++ b/gaeia-web/src/pages/index.astro
@@ -3,13 +3,20 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 import ProgressBar from '../components/ProgressBar.astro';
 import StreakCounter from '../components/StreakCounter.astro';
 import BadgeShelf from '../components/BadgeShelf.astro';
-import { getAllTrilhas, getTrilhaTopicoIds, getAllTopicos, getAllTags } from '../utils/trilhas';
+import { getAllTrilhas, getTrilhaTopicoIds, getAllTopicos, getAllTags, computeHorasEstimadas } from '../utils/trilhas';
 import { calculateEarnedBadges } from '../utils/badges';
 import { TRILHA_ICON_PATHS } from '../utils/uiConstants';
 import { url } from '../utils/url';
 
 // Load trilhas and topics
 const trilhas = await getAllTrilhas();
+const trilhasHoras = await Promise.all(
+  trilhas.map(async (trilha) => ({
+    trilha,
+    horas: await computeHorasEstimadas(trilha.id),
+  }))
+);
+const horasMap = new Map(trilhasHoras.map(({ trilha, horas }) => [trilha.id, horas]));
 const topicos = await getAllTopicos();
 const topicosCount = topicos.length;
 const allTags = await getAllTags();
@@ -66,7 +73,7 @@ const badges = calculateEarnedBadges();
                   </p>
                   <div class="flex items-center gap-4 text-sm text-dim">
                     <span>{totalTopicos} topicos</span>
-                    <span>~{trilha.horasEstimadas}h</span>
+                    <span>~{horasMap.get(trilha.id)}h</span>
                   </div>
 
                   <!-- Progress placeholder -->
