--- a/gaeia-web/src/pages/trilhas/index.astro
+++ b/gaeia-web/src/pages/trilhas/index.astro
@@ -1,12 +1,19 @@
 ---
 import BaseLayout from '../../layouts/BaseLayout.astro';
 import ProgressBar from '../../components/ProgressBar.astro';
-import { getAllTrilhas, getTrilhaTopicoIds } from '../../utils/trilhas';
+import { getAllTrilhas, getTrilhaTopicoIds, computeHorasEstimadas } from '../../utils/trilhas';
 import { TRILHA_ICON_PATHS, NIVEL_LABELS, NIVEL_COLORS_TEXT } from '../../utils/uiConstants';
 import { url } from '../../utils/url';
 
-// Load all trilhas
+// Load all trilhas and pre-compute hours from topics
 const trilhas = await getAllTrilhas();
+const trilhasHoras = await Promise.all(
+  trilhas.map(async (trilha) => ({
+    trilha,
+    horas: await computeHorasEstimadas(trilha.id),
+  }))
+);
+const horasMap = new Map(trilhasHoras.map(({ trilha, horas }) => [trilha.id, horas]));
 ---
 
 <BaseLayout title="Trilhas de Aprendizado">
@@ -59,7 +66,7 @@ const trilhas = await getAllTrilhas();
                     {totalTopicos} topicos
                   </span>
                   <span class="text-dim">
-                    ~{trilha.horasEstimadas}h
+                    ~{horasMap.get(trilha.id)}h
                   </span>
                 </div>
 
@@ -108,7 +115,7 @@ const trilhas = await getAllTrilhas();
                 <td class="py-3 px-4 font-medium text-bright">{trilha.nome}</td>
                 <td class={`py-3 px-4 ${NIVEL_COLORS_TEXT[trilha.nivel]}`}>{NIVEL_LABELS[trilha.nivel]}</td>
                 <td class="py-3 px-4 text-dim">{getTrilhaTopicoIds(trilha).length}</td>
-                <td class="py-3 px-4 text-dim">~{trilha.horasEstimadas}h</td>
+                <td class="py-3 px-4 text-dim">~{horasMap.get(trilha.id)}h</td>
                 <td class="py-3 px-4 text-dim line-clamp-1">{trilha.descricao}</td>
               </tr>
             ))}
